mudando para mobile-first

--- a/responsividade.html
+++ b/responsividade.html
@@ -21,14 +21,17 @@
     <main >
 
 
-        <section class="card">
+        <section>
 
-            <img id="imagem-principal" src="./images/img2_plantas.png" alt="foto de folhas"/>
+            <img id="imagem-mobile" src="./images/img2_plantas(m).png" alt="foto de folhas"/>
+            <img id="imagem-desktop" src="./images/img2_plantas(d).png" alt="foto de folhas"/>
 
             <div id="div-principal">
 
-                <h1>Decore sua casa com plantas!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus at ornare tortor, magna interdum ut. Fringilla tellus neque malesuada ullamcorper. Lacinia interdum sollicitudin sed sit eget sit. Tristique velit gravida aenean nulla. Ut gravida lobortis magnis purus dui. At nibh massa orci, varius auctor cursus commodo. Nisi, non molestie tincidunt posuere leo etiam eu, orci. Consequat diam facilisi neque, est sit. Gravida nibh magna cursus eget eget velit cras.</p>
+                <div id="div-texto">
+                    <h1>Decore sua casa com plantas!</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus at ornare tortor, magna interdum ut. Fringilla tellus neque malesuada ullamcorper. Lacinia interdum sollicitudin sed sit eget sit. Tristique velit gravida aenean nulla. Ut gravida lobortis magnis purus dui. At nibh massa orci, varius auctor cursus commodo. Nisi, non molestie tincidunt posuere leo etiam eu, orci. Consequat diam facilisi neque, est sit. Gravida nibh magna cursus eget eget velit cras.</p>
+                </div>
 
                 <div id="hmenu">
                     <h3>S H A R E</h3>
