atualização dos paddings e do nome do arquivo .html

--- a/plantCard.html
+++ b/plantCard.html
@@ -28,8 +28,8 @@
 
             <div id="div-principal">
 
-                <div id="div-texto">
-                    <h1>Decore sua casa com plantas!</h1>
+                <div>
+                    <h1 id="titulo-principal">Decore sua casa com plantas!</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus at ornare tortor, magna interdum ut. Fringilla tellus neque malesuada ullamcorper. Lacinia interdum sollicitudin sed sit eget sit. Tristique velit gravida aenean nulla. Ut gravida lobortis magnis purus dui. At nibh massa orci, varius auctor cursus commodo. Nisi, non molestie tincidunt posuere leo etiam eu, orci. Consequat diam facilisi neque, est sit. Gravida nibh magna cursus eget eget velit cras.</p>
                 </div>
 
@@ -47,8 +47,8 @@
                 </div>
 
                 <div class="row between">
-                    <div class="row">
-                        <img class="avatarPic" src="./images/img2_doguito.png" alt="foto do Doguito"/>
+                    <div class="row" id="perfil-doguito">
+                        <img class="foto-doguito" src="./images/img2_doguito.png" alt="foto do Doguito"/>
                         <div>
                             <h2>Doguito</h2>
                             <p>29/09/2022</p>
