--- a/plantCard.html
+++ b/plantCard.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Exercício de responsividade"/>
     <meta name="author" content="Pedro Teles"/>
 
-    <title>Document</title>
+    <title>Plant Card</title>
 
     <link rel="stylesheet" href="./estilo.css"/>
     <script src="script.js"></script>
@@ -18,7 +18,7 @@
 <body>
 
 
-    <main >
+    <main>
 
 
         <section>
@@ -26,38 +26,42 @@
             <img id="imagem-mobile" src="./images/img2_plantas(m).png" alt="foto de folhas"/>
             <img id="imagem-desktop" src="./images/img2_plantas(d).png" alt="foto de folhas"/>
 
-            <div id="div-principal">
+            <div class="div-principal">
 
                 <div>
-                    <h1 id="titulo-principal">Decore sua casa com plantas!</h1>
+                    <h1>Decore sua casa com plantas!</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus at ornare tortor, magna interdum ut. Fringilla tellus neque malesuada ullamcorper. Lacinia interdum sollicitudin sed sit eget sit. Tristique velit gravida aenean nulla. Ut gravida lobortis magnis purus dui. At nibh massa orci, varius auctor cursus commodo. Nisi, non molestie tincidunt posuere leo etiam eu, orci. Consequat diam facilisi neque, est sit. Gravida nibh magna cursus eget eget velit cras.</p>
                 </div>
 
-                <div id="hmenu">
-                    <h3>S H A R E</h3>
-                    <a href="/">
-                        <img src="./images/img2_facebook.png" alt="icone do facebook"/>
-                    </a>
-                    <a href="/">
-                        <img src="./images/img2_twitter.png" alt="icone do twitter"/>
-                    </a>
-                    <a href="/">
-                        <img src="./images/img2_pinterest.png" alt="icone do pinterest"/>
-                    </a>
-                </div>
+                <div>
 
-                <div class="row between">
-                    <div class="row" id="perfil-doguito">
-                        <img class="foto-doguito" src="./images/img2_doguito.png" alt="foto do Doguito"/>
-                        <div>
-                            <h2>Doguito</h2>
-                            <p>29/09/2022</p>
-                        </div>
+                    <div id="h-menu">
+                        <h3>S H A R E</h3>
+                        <a href="/">
+                            <img src="./images/img2_facebook.png" alt="icone do facebook"/>
+                        </a>
+                        <a href="/">
+                            <img src="./images/img2_twitter.png" alt="icone do twitter"/>
+                        </a>
+                        <a href="/">
+                            <img src="./images/img2_pinterest.png" alt="icone do pinterest"/>
+                        </a>
                     </div>
 
-                    <button onclick="mostrarMenu()">
-                            <img src="./images/img2_hmenu.png" alt="menu hamburger"/>
-                    </button>
+                    <div class="div-perfil1">
+                        <div class="div-perfil2">
+                            <img src="./images/img2_doguito.png" alt="foto do Doguito"/>
+                            <div>
+                                <h2>Doguito</h2>
+                                <h6>29/09/2022</h6>
+                            </div>
+                        </div>
+
+                        <button onclick="mostrarMenu()">
+                                <img src="./images/img2_hmenu.png" alt="menu hamburger"/>
+                        </button>
+                    </div>
+
                 </div>
 
             </div>
